// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basename (windows-style path) 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "Suchipi
",
}
`;

exports[`basename 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "yeah
",
}
`;

exports[`cd affects working directory of exec 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "<rootDir>/src
",
}
`;

exports[`cd and pwd 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "<rootDir>
<rootDir>/src
<rootDir>
<rootDir>/scripts
/tmp
",
}
`;

exports[`dirname (windows-style path) 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "C:\\\\Users
",
}
`;

exports[`dirname 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/hi/there
",
}
`;

exports[`extname (windows-style path) 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": ".js
.js
.test.js
.js
",
}
`;

exports[`extname 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": ".js
.js
.js
.js
.test.js
.test.js
.js
.js



",
}
`;

exports[`paths.detectSeparator 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/
\\\\
/
",
}
`;

exports[`paths.join 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "one/two
/one/two/three/four
bla/blah/hi
.\\\\bla\\\\blah\\\\hi\\\\there
.\\\\bla\\\\blah\\\\hi\\\\there
",
}
`;

exports[`paths.resolve with absolute path with . and ..s in it 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/hi/there/yup
",
}
`;

exports[`paths.resolve with already-absolute path 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/hi/there/yeah
",
}
`;

exports[`paths.split (windows-style paths) 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "[
  \\"C:\\"
  \\"some\\"
  \\"path\\"
  \\"some\\"
  \\"where\\"
]
[
  \\"D:\\"
  \\"with\\"
  \\"trailing\\"
  \\"slash\\"
]
[
  \\".\\"
  \\"this\\"
  \\"one's\\"
  \\"relative\\"
]
[
  \\"..\\"
]
[
  \\"..\\"
  \\"yeah\\"
]
[
  \\"hi\\"
]
[
  \\"hello\\"
  \\"mario\\"
]
[
  \\"E:\\"
  \\"what\\"
]
[
  \\"Z:\\"
  \\"who\\"
  \\"tf\\"
  \\"keeps putting\\"
  \\"double\\"
  \\"slashes\\"
]
",
}
`;

exports[`paths.split 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "[
  \\"\\"
  \\"some\\"
  \\"path\\"
  \\"some\\"
  \\"where\\"
]
[
  \\"\\"
  \\"with\\"
  \\"trailing\\"
  \\"slash\\"
]
[
  \\".\\"
  \\"this\\"
  \\"one's\\"
  \\"relative\\"
]
[
  \\"..\\"
]
[
  \\"..\\"
  \\"yeah\\"
]
[
  \\"hi\\"
]
[
  \\"hello\\"
  \\"mario\\"
]
[
  \\"\\"
  \\"what\\"
]
[
  \\"\\"
  \\"who\\"
  \\"tf\\"
  \\"keeps putting\\"
  \\"double\\"
  \\"slashes\\"
]
",
}
`;

exports[`realpath against dead link throws error 1`] = `
Object {
  "code": 1,
  "error": false,
  "stderr": "Error: No such file or directory (errno = 2, path = ./dead-link)
  at realpath (native)
  at realpath (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>) {
  errno: 2
  path: \\"./dead-link\\"
}
",
  "stdout": "",
}
`;

exports[`realpath against non-existent target throws error 1`] = `
Object {
  "code": 1,
  "error": false,
  "stderr": "Error: No such file or directory (errno = 2, path = ./this doesn't exist, bro)
  at realpath (native)
  at realpath (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>) {
  errno: 2
  path: \\"./this doesn't exist, bro\\"
}
",
  "stdout": "",
}
`;

exports[`realpath resolution behavior 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "/tmp
<rootDir>/src/api/test_fixtures/symlinks
<rootDir>/src/api/test_fixtures
<rootDir>/src/api/test_fixtures/symlinks/some-folder
<rootDir>/src/api/test_fixtures/symlinks/some-file
<rootDir>/src/api/test_fixtures/symlinks/some-folder
<rootDir>/src/api/test_fixtures/symlinks/some-file
<rootDir>/src/api/test_fixtures/symlinks/some-folder
<rootDir>/src/api/test_fixtures/symlinks/some-file
<rootDir>/src/api/test_fixtures/symlinks/some-folder
<rootDir>/src/api/test_fixtures/symlinks/some-file
<rootDir>
",
}
`;
